--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="192x192" href="/icon-192.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#7c3aed" />
     <link rel="apple-touch-icon" href="/icon-192.png" />
-    <title>RushkroLudo – Play & Win</title>
+    <title>RushkroLudo – Play Ludo, Aviator & Win Real Cash</title>
+
+    <!-- SEO Meta Tags -->
+    <meta name="description" content="RushkroLudo – Play Ludo King, Aviator crash game & Lucky Spinner. Win real cash with instant UPI withdrawals. Join now and start winning!" />
+    <meta name="keywords" content="RushkroLudo, Ludo King, Aviator game, Lucky Spinner, win real cash, online gaming, UPI withdrawal, play and win, crash game, ludo online" />
+    <meta name="author" content="RushkroLudo" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="RushkroLudo – Play Ludo, Aviator & Win Real Cash" />
+    <meta property="og:description" content="Play Ludo King, Aviator crash game & Lucky Spinner. Win real cash with instant UPI withdrawals!" />
+    <meta property="og:image" content="/icon-512.png" />
+    <meta property="og:site_name" content="RushkroLudo" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="RushkroLudo – Play Ludo, Aviator & Win Real Cash" />
+    <meta name="twitter:description" content="Play Ludo King, Aviator crash game & Lucky Spinner. Win real cash with instant UPI withdrawals!" />
+    <meta name="twitter:image" content="/icon-512.png" />
   </head>
   <body>
     <div id="root"></div>
