Add Google Search Console verification

--- a/index.html
+++ b/index.html
@@ -15,19 +15,22 @@
     <meta name="keywords" content="RushkroLudo, Ludo King, Aviator game, Lucky Spinner, win real cash, online gaming, UPI withdrawal, play and win, crash game, ludo online" />
     <meta name="author" content="RushkroLudo" />
     <meta name="robots" content="index, follow" />
+    <meta name="google-site-verification" content="6D9Rw5aYsvdCFxZlxZBmr7n5W0ioWujNBvIO4cC3iHk" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:title" content="RushkroLudo – Play Ludo, Aviator & Win Real Cash" />
     <meta property="og:description" content="Play Ludo King, Aviator crash game & Lucky Spinner. Win real cash with instant UPI withdrawals!" />
-    <meta property="og:image" content="/icon-512.png" />
+    <meta property="og:url" content="https://rushkaroludo.com/" />
+    <meta property="og:image" content="https://rushkaroludo.com/icon-512.png" />
     <meta property="og:site_name" content="RushkroLudo" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="RushkroLudo – Play Ludo, Aviator & Win Real Cash" />
     <meta name="twitter:description" content="Play Ludo King, Aviator crash game & Lucky Spinner. Win real cash with instant UPI withdrawals!" />
-    <meta name="twitter:image" content="/icon-512.png" />
+    <meta name="twitter:image" content="https://rushkaroludo.com/icon-512.png" />
+    <link rel="canonical" href="https://rushkaroludo.com/" />
   </head>
   <body>
     <div id="root"></div>
