--- a/index.html
+++ b/index.html
@@ -21,16 +21,16 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="RushkroLudo – Play Ludo, Aviator & Win Real Cash" />
     <meta property="og:description" content="Play Ludo King, Aviator crash game & Lucky Spinner. Win real cash with instant UPI withdrawals!" />
-    <meta property="og:url" content="https://rushkaroludo.com/" />
-    <meta property="og:image" content="https://rushkaroludo.com/icon-512.png" />
+    <meta property="og:url" content="https://rushkroludo.com/" />
+    <meta property="og:image" content="https://rushkroludo.com/icon-512.png" />
     <meta property="og:site_name" content="RushkroLudo" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="RushkroLudo – Play Ludo, Aviator & Win Real Cash" />
     <meta name="twitter:description" content="Play Ludo King, Aviator crash game & Lucky Spinner. Win real cash with instant UPI withdrawals!" />
-    <meta name="twitter:image" content="https://rushkaroludo.com/icon-512.png" />
-    <link rel="canonical" href="https://rushkaroludo.com/" />
+    <meta name="twitter:image" content="https://rushkroludo.com/icon-512.png" />
+    <link rel="canonical" href="https://rushkroludo.com/" />
   </head>
   <body>
     <div id="root"></div>
